--- a/server/package.json
+++ b/server/package.json
@@ -11,12 +11,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo": "^2.34.0",
+    "apollo-boost": "^0.4.9",
     "apollo-server-express": "^3.8.1",
     "bcrypt": "^5.0.0",
+    "boostrap": "^2.0.0",
+    "bootstrap": "^5.1.3",
     "express": "^4.17.1",
-    "graphql": "^15.5.0",
+    "graphql": "^15.8.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.10"
+    "mongoose": "^5.9.10",
+    "react": "^18.1.0",
+    "tag": "^0.4.17"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
