--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "apollo-server-express": "^2.15.1",
-    "bootstrap": "^5.1.3"
+    "bootstrap": "^5.1.3",
+    "node": "^17.7.2"
   }
 }
